--- a/vehicle-rental/package.json
+++ b/vehicle-rental/package.json
@@ -11,6 +11,7 @@
     "jspdf": "^2.3.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
