--- a/vehicle-rental/package.json
+++ b/vehicle-rental/package.json
@@ -14,7 +14,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
